Fixing layout on iOS 9.

--- a/src/css/gameboy.css
+++ b/src/css/gameboy.css
@@ -95,7 +95,6 @@ body
   border: 1px solid #000;
   border-bottom: 1.5px solid #000;
   margin: 0 auto;
-  width: 100%;
   height: 338px;
   box-shadow: 0 2px 2px rgba(255, 255, 255, 0.08), inset 0 -2px 3px rgba(255, 255, 255, 0.03);
   border-radius: 12px;
